--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "morgan": "^1.9.0",
     "next": "^6.0.3",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
