--- a/package.json
+++ b/package.json
@@ -2,26 +2,34 @@
   "name": "sound-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js",
+    "dev": "nodemon -w server -w yarn.lock -w package.json -w next.config.js",
     "build": "next build",
-    "start": "next start"
+    "start": "node server/app.js",
+    "sequelize": "node_modules/.bin/sequelize"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^1.3.6",
+    "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "graphql": "^0.13.2",
+    "graphql-tools": "^3.0.2",
     "morgan": "^1.9.0",
     "next": "^6.0.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "pg": "^7.4.3",
+    "pg-hstore": "^2.3.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react-dom": "^16.4.1",
+    "sequelize": "^4.37.10",
+    "sequelize-cli": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
