--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "next": "^6.0.3",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
+    "path": "^0.12.7",
     "pg": "^7.4.3",
     "pg-hstore": "^2.3.2",
     "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "sequelize": "^4.37.10",
-    "sequelize-cli": "^4.0.0"
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.17.5"
