--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon -w server -w yarn.lock -w package.json -w next.config.js -w data",
+    "migrate": "node_modules/db-migrate/bin/db-migrate",
     "build": "next build",
-    "start": "node server/app.js",
-    "sequelize": "node_modules/.bin/sequelize"
+    "start": "node server/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
+    "db-migrate": "^0.11.1",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
