--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^1.3.6",
     "body-parser": "^1.18.3",
     "db-migrate": "^0.11.1",
+    "db-migrate-pg": "^0.4.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
